<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Kraken Escape</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
	<string name="start_game">Start game!</string>
	<string name="josh_main_menu_control_objects_button_string">Control Objects - Josh</string>
	<string name="start">Touch to Start</string>
	<string name="startButton">Start Game</string>
	<string name="menu_back">Main Menu Background</string>
	<string name="highButton">Highscores Button</string>
	<string name="optButton">Options Button</string>
	<string name="musicText">Music On</string>
	<string name="howToPlay">How To Play</string>
	<string name="musicIO"></string>
	<string name="difficultyText">Difficulty</string>
	<string name="easyText">Easy</string>
	<string name="hardText">Hard</string>
	<string name="splash">Splashscreen</string>
	<string name="logo">Logo</string>
	<string name="title">Title</string>
	<string name="htpButton">HowToPlay Button</string>
	<color name="white">#FFFFFF</color>
	<color name="black">#000000</color>
	<string name="leaderboardButton">Leaderboard</string>
	<string name="menuButton">Menu</string>
	<string name="highScoreButton">Highscores</string>
	<string name="resume">Resume</string>
	
	<!-- Missing Content ID tags for Main Game Fragment Image Views -->
	
	<string name ="scrollingview">scrollingviewport</string>
	<string name ="horizontalslider">horizontalslider</string>
	<string name ="vertslider">vertslider</string>
	<string name ="flipswitch">flipswitch</string>
	<string name ="vertflipswitch">vertflipswitch</string>
	<string name ="slideswitch">slideswitch</string>
	<string name ="dial">dial</string>
	<string name="leaderboard_fragment_refreshButton">Refresh Button</string>
	
	
</resources>
