<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout 
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="480dp"
	android:background="@drawable/gameover"
	android:orientation="vertical">
    
    <TextView
        android:layout_centerInParent="true"
        android:id="@+id/dialogtext"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:minHeight="20dp"
        android:gravity="center"
        android:layout_margin="10dp"
        android:background="@android:color/transparent"
        android:text="@string/hello_world"
        android:textStyle="bold"
        android:textSize="20sp"
        android:tileMode="repeat"
        	>
        
    </TextView>
    
    <LinearLayout
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@android:color/transparent"
        android:orientation="horizontal"
        android:weightSum="2">
        
        <Button
            android:id="@+id/btn_menu"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:clickable="true"
            android:text="@string/menuButton"
            android:textStyle="bold"
            android:textColor="@android:color/white"
            android:background="@drawable/port">
            
        </Button>
            
         <Button
            android:id="@+id/highscores"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:clickable="true"
            android:text="@string/highScoreButton"
            android:textStyle="bold"
            android:textColor="@android:color/white"
            android:background="@drawable/port">
            
        </Button>
    </LinearLayout>

</RelativeLayout>
